--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:android": "expo prebuild --platform android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "android": "expo run:android"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
