--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mymedlog",
-  "main": "expo-router/entry",
+  "main": "src/index.js",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
@@ -18,6 +18,7 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native-stack": "^7.3.21",
     "expo": "~53.0.17",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
