--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mymedlog",
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
